--- a/platformio.ini
+++ b/platformio.ini
@@ -1,26 +1,78 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
+
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
+monitor_port = /dev/cu.usbserial-210
 
-; Add lib_deps directory
-lib_dirs = 
-    lib
-    ../one.core
-    ../one.models
-    ../one.baypass.replicant
+build_flags = 
+    -std=gnu++17
+    -D UNITY_INCLUDE_DOUBLE
+    -D UNITY_DOUBLE_PRECISION=1e-12
+    -D ARDUINO_ARCH_ESP32
+    -D ESP32
+    ; Memory management
+    -D ESP32_SPIRAM_SUPPORT
+    -D ESP32_SPIRAM_USE_MALLOC
+    -D ESP32_SPIRAM_TYPE_AUTO
+    -D ESP32_SPIRAM_SIZE=-1
+    ; WebSocket configuration
+    -D WS_RX_BUFFER_SIZE=4096
+    -D WS_TX_BUFFER_SIZE=4096
+    -D WS_MAX_QUEUED_MESSAGES=50
+    ; Debug options
+    -D ESP_LOG_DEFAULT_LEVEL=3
+    ; Optimization
+    -O2
+    -DNDEBUG
+    ; Stack protection
+    -fstack-protector-strong
+    ; Embed root certificate
+    -DEMBEDDED_CERTS
+    -DROOT_CA_PEM=\"src/certs/root_ca.pem\"
 
-; Enable filesystem
-board_build.filesystem = spiffs 
+build_unflags = -std=gnu++11
+
+lib_deps =
+    bblanchon/ArduinoJson @ ^6.21.4
+    rweather/Crypto @ ^0.4.0
+    vshymanskyy/StreamDebugger @ ^1.0.1
+    vshymanskyy/TinyGSM @ ^0.11.7
+    rlogiacco/CircularBuffer @ ^1.3.3
+    agdl/Base64 @ ^1.0.0
+
+lib_ldf_mode = deep
+
+; Custom partition table
+board_build.partitions = partitions_custom.csv
+
+; Debug port
+debug_tool = esp-prog
+debug_init_break = tbreak setup
+
+; PSRAM support
+board_build.psram_type = opi
+
+; Upload options
+upload_speed = 115200
+upload_port = /dev/cu.usbserial-210
 
 ; Test configuration
 test_framework = unity
-test_build_src = yes
 test_filter = test_*
+test_ignore = test_ignored
 
-build_flags = 
-    -D UNITY_INCLUDE_DOUBLE
-    -D UNITY_DOUBLE_PRECISION=1e-12
-    -std=gnu++17
-    -DCONFIG_ARDUHAL_LOG_COLORS=1 
+board_build.embed_files =
+    src/certs/root_ca.pem
