--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
-framework = arduino
+framework = espidf
 
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
@@ -21,7 +21,6 @@ build_type = debug
 
 build_flags = 
     -std=gnu++17
-    -D ARDUINO_ARCH_ESP32
     -D ESP32
     ; Debug options
     -D ESP_LOG_DEFAULT_LEVEL=5
@@ -33,11 +32,6 @@ build_flags =
     -I src/instance
     -I src/chum
     -I src/display
-    ; mbedtls configuration
-    -D MBEDTLS_BASE64_C
-    -D MBEDTLS_ECDSA_C
-    -D MBEDTLS_ECP_C
-    -D MBEDTLS_ECP_DP_SECP256R1_ENABLED
 
 build_unflags = 
     -std=gnu++11
@@ -48,32 +42,20 @@ build_src_filter =
     -<wireless_test.cpp>
     -<uart_bridge.cpp>
 
-lib_deps =
-    ; Core wireless libraries
-    WiFi
-    BLE
-    ; Display
-    thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.4.0
-    ; JSON handling
-    bblanchon/ArduinoJson @ ^6.21.3
-    ; WebSocket
-    links2004/WebSockets @ ^2.4.1
-    ; Filesystem
-    SPIFFS
+; ESP-IDF specific settings
+board_build.partitions = partitions.csv
+board_build.embed_files =
+    src/certs/root_ca.pem
 
-; Upload options
-upload_speed = 115200
-upload_port = /dev/cu.wchusbserial210
+; Component configuration
+board_build.embed_txtfiles =
+    src/certs/root_ca.pem
 
-; Filesystem options
-board_build.filesystem = spiffs
-board_build.partitions = min_spiffs.csv
+; ESP-IDF component manager dependencies
+platform_packages =
+    framework-espidf @ ~3.40300.0
 
 ; Test configuration
 test_framework = unity
 test_filter = test_*
 test_ignore = test_ignored
-
-; Embedded files
-board_build.embed_files =
-    src/certs/root_ca.pem
